[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Thruster-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -629, -121 )
scale = Vector2( 3.77539, 1 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -100 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
margin_left = 412.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 340.0
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 412.0
margin_top = 360.0
margin_right = 612.0
margin_bottom = 400.0
focus_neighbour_top = NodePath("../Resume")
focus_previous = NodePath("../Resume")
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 412.0
margin_top = 420.0
margin_right = 612.0
margin_bottom = 460.0
focus_neighbour_top = NodePath("../Resume")
focus_previous = NodePath("../Resume")
custom_fonts/font = SubResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 412.0
margin_top = 480.0
margin_right = 612.0
margin_bottom = 520.0
focus_neighbour_top = NodePath("../Resume")
focus_previous = NodePath("../Resume")
custom_fonts/font = SubResource( 2 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
